--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Wiki Mock-Up</title>
+
     <link rel="stylesheet" href="CSS/bootstrap.css" media="screen" title="no title">
+    <link rel="stylesheet" href="CSS/style.css" media="screen" title="no title">
+
   </head>
 
   <body>
@@ -17,16 +20,37 @@
           <li>e</li>
           <li>f</li>
           <li>g</li>
+          <li>a</li>
+          <li>b</li>
+          <li>c</li>
+          <li>d</li>
+          <li>e</li>
+          <li>f</li>
+          <li>g</li>
+          <li>a</li>
+          <li>b</li>
+          <li>c</li>
+          <li>d</li>
+          <li>e</li>
+          <li>f</li>
+          <li>g</li>
+          <li>a</li>
+          <li>b</li>
+          <li>c</li>
+          <li>d</li>
+          <li>e</li>
+          <li>f</li>
+          <li>g</li>
         </ul>
       </div>
+
       <div class="row">
         <div class="col-md-4">
           <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <h1>consectetur adipiscing</h1>
           </ul>
         </div>
+
         <div class="col-md-1">
           <ul>
             <li>1</li>
@@ -48,25 +72,36 @@
             <li>3</li>
           </ul>
         </div>
-     </div>
+      </div>
+
       <div class="col-md-4">
         <div class="row">
+
+          <h2>consectetur adipiscing</h2>
+          <img src="imgs/panda.jpg" alt="panda" />
+
           <p>
             1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.
           </p>
         </div>
         <div class="row">
+          <h2>consectetur adipiscing</h2>
           <p>
             1a Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.
           </p>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="row">
-          2 pLorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.
+          <h2>consectetur adipiscing</h2>
+          <p>
+          2 pLorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.</p>
         </div>
         <div class="row">
-          2a pLorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.
+          <h2>consectetur adipiscing</h2>
+          <p>
+          2a pLorem ipsum dolor sit amet, consectetur adipiscing elit. In pulvinar id sapien ut scelerisque. Sed fermentum nibh non convallis suscipit. Suspendisse interdum viverra justo. Phasellus tempus erat nibh, id consectetur lectus sagittis at. Phasellus euismod tempor nibh vel pulvinar. Sed cursus dictum odio, sagittis dapibus leo placerat eget. Cras posuere at velit eget tincidunt. Phasellus efficitur in elit in feugiat. In suscipit nisl semper nunc imperdiet consequat. Morbi sodales odio sit amet cursus rutrum. Curabitur nunc magna, convallis sit amet laoreet quis, imperdiet vitae elit. Aenean ac pretium enim. Sed sit amet felis vitae lorem feugiat eleifend. Donec tellus augue, luctus eget lacinia vitae, posuere quis mauris.</p>
         </div>
       </div>
     </div>
